# env-shelf-local

./: .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: theme-provider.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx  sonner.tsx  tabs.tsx  textarea.tsx  toggle.tsx
src/lib/: env.ts  i18n.ts  tauri.ts
src/state/: reducer.ts
