[package]
name = "envshelf"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = ["dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
walkdir = "2.5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
